fix link spacing

--- a/src/css/components/c-transport-module.scss
+++ b/src/css/components/c-transport-module.scss
@@ -100,8 +100,8 @@
       }
 
       & a {
-        text-decoration: underline;
-        color: $bluePurple;
+        text-decoration: none;
+        border-bottom: 1.2px solid $bluePurple;
       }
     }
   }
